# Sobel-Edge-Detector

./: .gitignore  CMakeLists.txt  hands_methods.cpp  hands_methods.h  main.cpp  sobel_operator.cpp  sobel_operator.h
